--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,5 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rywys229/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank">给上司的圣诞节礼物 送得好不如送得巧</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_58982851_Subscription_L-320x200.jpg" align ="left"></a>到了圣诞节，有些人会为上司或老板准备一份礼物。然而专家提醒，这么做之前最好先仔细评估，以免造成反效果！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:21 AM	</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708967.md#1" target="_blank">煎饼人人爱 14国特色煎饼你吃过几种？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d71f2b18d04ba5a7329d753988f4bc25-320x200.jpg" align ="left"></a>煎饼是人们利用粮食最古老的方式之一。在世界各地的文化里，煎饼几乎都占有一席之地。各地的煎饼有甜、有咸，展现了人们使用物产的创意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:25 AM	</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703012.md#1" target="_blank">鸭鸭放风快乐往前冲 为何下一秒紧急撒退？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6460c2c78faa79b94a356203f478bfbd-150x120.jpg" align ="left"></a>那天是佛蒙特州入冬以来第一天下雪，照往常一样，鸭鸭放风的时间到了；农场工作人员把门一打开，鸭鸭们迫不及待的往外冲，不久就兴高采烈地冲到门口了，但它们很快就感觉好像哪里不对劲，瞬间停格！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:53 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703049.md#1" target="_blank">“生女儿”种111颗树 村长守护女孩全村大翻转</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f7e273f9b2eb02848af187676991f87a-150x120.jpg" align ="left"></a>印度素来有重男轻女的问题，女孩的社会地位通常远比男性卑微，甚至并 受到藐视；然而，有一个小村落里的女孩却被视为福气，全村的人还为每一位新誔生的女孩种下111颗树木，是谁改变了这一切呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:45 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank">给上司的圣诞节礼物 送得好不如送得巧</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_58982851_Subscription_L-150x120.jpg" align ="left"></a>到了圣诞节，有些人会为上司或老板准备一份礼物。然而专家提醒，这么做之前最好先仔细评估，以免造成反效果！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank">多伦多11月房价涨幅6.8% 2年来最高</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15209408-150x120.jpg" align ="left"></a>多伦多11月房价持续上涨，由于市场供应持续跟不上需求，目前涨势2017年以来最猛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank">巷弄里的美味</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/040e559382ce43b249a3c2de45cab864-150x120.jpg" align ="left"></a>对于越南的美食略有了解的人都知道顺化牛肉粉、越南春卷、广南面、越南煎饼、烤肉饭，这些都是在越南的街头巷尾随处可见的巷弄美食。最近，这些美食出现在了温哥华Victoria Dr.上一家新开的越南餐厅：La Maison Da Nang。听这名字的Da Nang就知道是来自越南美丽的海港城市——岘港的美食。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank">美5岁男童出席收养仪式 全班同学到场祝贺</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_51021337_Subscription_L-150x120.jpg" align ="left"></a>美国密西根州一名5岁男童日前被一对夫妇正式收养。他在幼儿园的全班同学参加他的收养仪式，并向他表达支持与祝福之意，场面温馨感人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:33 PM			</td></tr>
@@ -21,13 +24,6 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691743.md#1" target="_blank">西澳珀斯租金年增长5.7% 为六年最高</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691743.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/467-2-e1575126939589-150x120.jpeg" align ="left"></a>新数据显示，珀斯租房客应对租金上涨心中有备，租金年中位价今年的涨幅创六年多的新高。虽然这对租户不是好消息，但却更广泛地显示出西澳房市和经济即将转向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691711.md#1" target="_blank">7大开发为珀斯扬名</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/467-1-150x120.jpg" align ="left"></a>珀斯近期开展的7个大型开发与新的城市规划，为西澳传统旅游业与美丽的自然风光增加了亮点，并使这座城市在国际舞台上提升了知名度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647771.md#1" target="_blank">预测：珀斯房价明年见底</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647771.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/466-3-150x120.jpeg" align ="left"></a>根据Core Logic最新房屋价值报告，十月除了珀斯，澳洲所有主要城市的房屋价格都上涨。此外，另一报告还预测，随着经济好转，珀斯房价可能将于明年跌至谷底，并开始复苏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647830.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】业主为何在谷底市场卖房？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647830.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/466-4-150x120.jpeg" align ="left"></a>传统上，房产不会随便出售。在华人观念中，土地和物业是一个人财产身家的代表，是衡量一个人财政状况的指标。购买或投资房地产的最终目的是房子可以升值，以便能够获利。如果在低谷的时候出售，必定亏损。本期专栏，我们来探讨为什么市场已经在谷底，但是业主仍需要出售房地产，目的又是什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:46 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647116.md#1" target="_blank">三季度珀斯房价微跌 西澳住房可负担性续改善</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/11/n11647116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/465-1-150x120.jpg" align ="left"></a>西澳房地产协会REIWA网站reiwa.com公布的数据显示，珀斯住宅销售市场的可负担性在2019年三季度有所改善，独立房和单元房价格已小幅走软。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:41 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704464.md#1" target="_blank">车评：旗舰SUV 2020 Kia Telluride</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2020_Kia_Telluride_01-150x120.jpg" align ="left"></a>韩国车厂Kia推出了旗舰SUV，Kia Telluride的概念车于2016年展出，并于2019年底特律国际车展中发表量产车，在今春时以2020年款推出市场，虽然Telluride个头大，但它仍只属中型SUV级别。
-
-
-
-Kia Telluride的外型以方方正正为设计概念，有别于Sorento，进风口设计仍是.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708076.md#1" target="_blank">汽车维修问与答：开暖气没有热风</a><br></h3>汽车维修问与答
 
 读者小袁问：您好，李师傅，我的车型号是2002年Toyota Camry，在做年检时修车师傅告知Engine Upper Right Stabilizer Mount Split，请问这个问题严重吗？谢谢。
