--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -3,10 +3,10 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703012.md#1" target="_blank">鸭鸭放风快乐往前冲 为何下一秒紧急撒退？</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6460c2c78faa79b94a356203f478bfbd-150x120.jpg" align ="left"></a>那天是佛蒙特州入冬以来第一天下雪，照往常一样，鸭鸭放风的时间到了；农场工作人员把门一打开，鸭鸭们迫不及待的往外冲，不久就兴高采烈地冲到门口了，但它们很快就感觉好像哪里不对劲，瞬间停格！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703049.md#1" target="_blank">“生女儿”种111颗树 村长守护女孩全村大翻转</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/5/n11703049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f7e273f9b2eb02848af187676991f87a-150x120.jpg" align ="left"></a>印度素来有重男轻女的问题，女孩的社会地位通常远比男性卑微，甚至并 受到藐视；然而，有一个小村落里的女孩却被视为福气，全村的人还为每一位新誔生的女孩种下111颗树木，是谁改变了这一切呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank">给上司的圣诞节礼物 送得好不如送得巧</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_58982851_Subscription_L-150x120.jpg" align ="left"></a>到了圣诞节，有些人会为上司或老板准备一份礼物。然而专家提醒，这么做之前最好先仔细评估，以免造成反效果！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:21 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707702.md#1" target="_blank">从港警滥用化武看催泪弹如何危害健康</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages23-1183198738-copy-150x120.jpg" align ="left"></a>2019年，自香港民众反送中抗争开始，这个被称为“东方之珠”的城市，几近沦为“催泪之城”。近六个月以来，港警持续发射催泪弹，其释放数量、密集度、持续时间之久，都是历史罕见。催泪弹这个听似无害的武器，在六个月间，向无数港人展示了它的毒害。催泪弹化学污染物带来的健康及环境问题逐渐浮现。催泪弹对人体健康的6大危害：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank">多伦多11月房价涨幅6.8% 2年来最高</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15209408-150x120.jpg" align ="left"></a>多伦多11月房价持续上涨，由于市场供应持续跟不上需求，目前涨势2017年以来最猛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank">越南海港的地道美味  令温哥华人心悦</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/040e559382ce43b249a3c2de45cab864-150x120.jpg" align ="left"></a>对于越南的美食略有了解的人都知道顺化牛肉粉、越南春卷、广南面、越南煎饼、烤肉饭，这些都是在越南的街头巷尾随处可见的巷弄美食。最近，这些美食出现在了温哥华Victoria Dr.上一家新开的越南餐厅：La Maison Da Nang。听这名字的Da Nang就知道是来自越南美丽的海港城市——岘港的美食。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:20 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank">巷弄里的美味</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/040e559382ce43b249a3c2de45cab864-150x120.jpg" align ="left"></a>对于越南的美食略有了解的人都知道顺化牛肉粉、越南春卷、广南面、越南煎饼、烤肉饭，这些都是在越南的街头巷尾随处可见的巷弄美食。最近，这些美食出现在了温哥华Victoria Dr.上一家新开的越南餐厅：La Maison Da Nang。听这名字的Da Nang就知道是来自越南美丽的海港城市——岘港的美食。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank">美5岁男童出席收养仪式 全班同学到场祝贺</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_51021337_Subscription_L-150x120.jpg" align ="left"></a>美国密西根州一名5岁男童日前被一对夫妇正式收养。他在幼儿园的全班同学参加他的收养仪式，并向他表达支持与祝福之意，场面温馨感人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707702.md#1" target="_blank">化学武器肆虐香港 揭催泪弹对人体和环境毒害</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages23-1183198738-copy-150x120.jpg" align ="left"></a>2019年，自香港民众反送中抗争开始，这个被称为“东方之珠”的城市，几近沦为“催泪之城”。近六个月以来，港警持续发射催泪弹，其释放数量、密集度、持续时间之久，都是历史罕见。催泪弹这个听似无害的武器，在六个月间，向无数港人展示了它的毒害。催泪弹化学污染物带来的健康及环境问题逐渐浮现。催泪弹对人体健康的6大危害：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:29 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707606.md#1" target="_blank">每天10秒运动法 2周改善腰痛 还能增强腹肌</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/low-back-pain10-1207-150x120.jpg" align ="left"></a>很多人深受腰痛所苦，问题出在筋膜和肌肉上，譬如臀部筋膜过于僵硬紧绷，或腹肌太弱，影响腰部正常活动。运动伤害防护员、筋膜放松专家泷泽幸一建议腰痛者，每天练习10秒筋膜放松操 + 腹式呼吸，通常坚持二周左右可以改善腰痛，并增强腹肌。但他也补充，若是腰痛范围扩大或疼痛加剧，可能并非肌肉或筋膜问题，则必须尽早就医。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707439.md#1" target="_blank">大蒜防癌抗老化　中医教你自制大蒜油</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/garlic_587638052-150x120.jpg" align ="left"></a>自古以来，大蒜在东西方的饮食和药用方面，都扮演着重要角色。食用大蒜好处多，但生蒜的刺激性让一些人望而却步，将蒜做成大蒜油，可以去除蒜的辛辣，又保留其营养。大蒜含大蒜素，大蒜功效包括：防癌、抗老化、助消化、促血液循环、降低胆固醇、预防心血管疾病。生蒜、黑蒜和熟蒜，哪种更好？中医教你自制大蒜油作法，烹调取用很方便。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704589.md#1" target="_blank">哈里森温泉的冬季灯节 湖畔灯光梦幻璀璨</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11704589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Harrison-1-150x120.jpg" align ="left"></a>11月23日至2020年1月12日，哈里森温泉美丽的冬季——湖畔灯光节登场；户外合成滑冰场也将首次亮相。在钓鱼、远足、骑车、划桨或滑冰之后，再美美地泡一阵子温泉，自是相当惬意舒适……又到冬季灯光节了，湖中灯光倒影辉映着哈里森温泉的自然美景，令迷人的哈里森湖畔（Harrison Lake）更添浪漫温情。而在您露营、钓鱼、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:09 PM			</td></tr>
