--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -25,6 +25,7 @@
 
 周六上午，大洛杉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/8/n11575403.md#1" target="_blank">法轮功横滨游行 日民众积极连署举报江泽民</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/8/n11575403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/DSC02601-150x120.jpg" align ="left"></a>10月6日日本部分法轮功学员汇集在国际都市横滨，举行声援3亿4千万中国同胞声明退出中共组织的游行活动，同时呼吁民众连署举报迫害法轮功的元凶江泽民。一路中，有不少民众和游客给予签名，表明连署举报迫害元凶江泽民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月08日 3:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/9/n11643329.md#1" target="_blank">每日三退声明精选（2019/11/08）</a><br></h3>我并非不理解那种功利的选择考虑，而是对共产党怀有一种强烈的抵触甚至恐惧。反右，大饥荒，文革，六四，我不能理解一个口口声声宣称代表最广大人民根本利益的党怎能视生命如草芥，频繁对人民亮出屠刀，亲手制造一处处人间地狱？党是上一代人命里的劫，是很多前辈终生的噩梦。但我希望乌云能就此散去，至少让我们救救孩子……最后，在此我宣布退出z中学时加入的共青团组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/8/n11641035.md#1" target="_blank">每日三退声明精选（2019/11/07）</a><br></h3>从小的时候就听共产党的教育，后来到了中学时期，从中共的腐败的的事情看出这个政权完全是欺骗这片土地上的人们的伪政权，在私下里拜访过受中共迫害的人，才知这个政权岂止是劣迹斑斑，简直就是罪恶滔天、罄竹难书、人神共愤。现声明与中共势不两立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/6/n11636744.md#1" target="_blank">参考资料：纵观天下（2019年11月传单/传真）</a><br></h3>纽约金秋大游行 华人踊三退 证人披露活摘器官黑幕 退团 退队 互联网大会 与会者翻墙成奇观 中共“老区”退党潮 洗脑教育害少儿......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/6/n11636257.md#1" target="_blank">每日三退声明精选（2019/11/05）</a><br></h3>我是一名地方上的公务员，当秘书的时候每晚跑酒场，偶尔没事还得随时恭候领导征召救场。喝酒喝得酒精肝，脾肿大，还有一次胃出血。最常跑的是接待，省上下来的都似钦差御史，再小的官都得忙不迭地陪着。大官的圈子云山雾绕，别有洞天，一般人没机会一窥其奸，我们只能陪些小官。那些个衣冠楚楚装腔作势的在省上处于食物链下端，也是整日被人呼来喝去，家素厚藏的被领导从头到脚撸过几遍猛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 10:45 AM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/11/n11581660.md#1" target="_blank">每日三退声明精选（2019/10/10）</a><br></h3>上学时被欺骗加入少先队组织，中共说血旗是血染成的，中共的政权确实是建立在苦难的中国民众的累累白骨之上的。在这个意义上塔利班去北京只是去膜拜祖师爷去的，也许它们想从中共那里学到，如何像中共在香港一样无恶不作制造巨大恐怖效应，但又不受到惩罚。中共用一个字：邪；两个字：邪教；三个字：假、恶、斗；四个字：邪恶至极；五个字：马克思主义；九个字：邪、骗、扇、斗、抢、痞、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 10:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/10/n11579638.md#1" target="_blank">每日三退声明精选（2019/10/09）</a><br></h3>我是大陆某著名风景区的居民，在外地做生意多年后回家，想申请在自己的宅基地上盖房子，没想到村干部说不行，后来再申请，村干部说拿过来一万块后再说。这些村干部家里的钱都花不完还给家人整上低保，村里的贫困户申请低保却整不来。这就是当今中国大陆的世道，老百姓无处伸冤，可以说中共邪党就是当今中国最大的黑社会，在此，我声明退出中共邪党的少先队等邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月10日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/9/n11577482.md#1" target="_blank">每日三退声明精选（2019/10/08）</a><br></h3>年少无知，被择入党，虽对形式化流程和众多事件模糊的新闻观点甚感蹊跷，心有疑惑，也只能且信之。如今明白很多的真相，在此声明：愿集权统治尽早消失，愿我中华人民获得天赋人权，愿全世界人民幸福安康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月09日 11:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/7/n11572771.md#1" target="_blank">每日三退声明精选（2019/10/06）</a><br></h3>本人自从上小学以来，一直受共匪的洗脑，在学校要系红领巾，上思想品德课的时候，几乎都是洗脑，都要学习共产党标榜的那些所谓的“英雄人物”，例如雷锋、周恩来等等。上了初中以后，虽然不系红领巾了，但是学校里时不时进行思想政治课的教育，总是说共产党多好多好。我爷爷那个时候，正经历文革，当时死了很多人，但是课本上从来都不提，老师也是从来都不讲。学校还骗我入团！这两年来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月07日 10:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_2.htm">http://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
