--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -15,6 +15,7 @@
        
 
 &nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/7/n11572771.md#1" target="_blank">每日三退声明精选（2019/10/06）</a><br></h3>本人自从上小学以来，一直受共匪的洗脑，在学校要系红领巾，上思想品德课的时候，几乎都是洗脑，都要学习共产党标榜的那些所谓的“英雄人物”，例如雷锋、周恩来等等。上了初中以后，虽然不系红领巾了，但是学校里时不时进行思想政治课的教育，总是说共产党多好多好。我爷爷那个时候，正经历文革，当时死了很多人，但是课本上从来都不提，老师也是从来都不讲。学校还骗我入团！这两年来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月07日 10:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/4/n11568612.md#1" target="_blank">每日三退声明精选（2019/10/04）</a><br></h3>中共在中国大陆邪恶统治七十年来，推行阶级斗争，维护独裁统治，犯下了灭绝人性的滔天罪行，至今还不想悔改，人心丧失。我决心与其划清界限，粛清其流毒，清清白白重新做人。在此我郑重声明：即日起坚决退出我曾经加入过的中国少年先锋队、中国共产主义青年团、中国共产党组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 12:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/4/n11567761.md#1" target="_blank">参考资料：纵观天下（2018年10月传单/传真）</a><br></h3>丹麦召开反活摘器官罪行会议 蒙特利尔声援三亿中国人三退 为自由公义而退 中共白皮书中的人权谬论 人心渐明小故事 邪党杀人史......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月04日 6:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/10/3/n11564323.md#1" target="_blank">每日三退声明精选（2019/10/02）</a><br></h3>香港反送中运动给人类带来的巨大收获之一是使中共的邪恶本质得以暴露得淋漓尽致，让全世界（特别是香港、台湾）进一步看清了中共的丑恶嘴脸及魔鬼本性。一个拥有法治传统的香港，仅仅因为有市民抗议活动，只用了三个月，就变成了失去一切监督的武装人员可以强奸、酷刑和秘密杀人的人间地狱？因为中共就是塔利班这样的恐怖组织！现在发生在香港的奸、杀、滥捕的所有疯狂行径，目的与塔利班.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 10:46 AM							</td></tr>
@@ -36,6 +37,5 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/9/9/n11508926.md#1" target="_blank">参考资料：纵观天下（2019年9月传单/传真）</a><br></h3>国际惩治新规 震慑迫害者 瑞士景点中国游客喜三退 骗人的人权伪装 非法迫害下 教师们的悲惨遭遇 一场引人深思的答辩 红朝末日败象显 人心思变难回天 声明退团退队......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月09日 3:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/9/8/n11506549.md#1" target="_blank">每日三退声明精选（2019/09/07）</a><br></h3>步入中壮年，经历了经济高速发展时期，感受了全社会贯穿上下的彻底的腐败与道德急速堕落，而作为微小的个人却完全无能为力，坚持洁身自好都很难。人们都清楚的知道世风日下的根源就是掌控国家的权贵们，是这个建立在歪理邪说基础上的流氓党。因此，我为自己误入其中而愧悔，其党垮亡也将是必然，相信这一天会很快来到。在此本人严正声明：退出中共党团队，做中华儿女，决不做马列子孙。愿.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月08日 11:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/9/7/n11505103.md#1" target="_blank">每日三退声明精选（2019/09/06）</a><br></h3>当年也是一腔热血，在谎言的鼓动下，信以为入党就是为天地立心，为生民立命，为往圣继绝学，更以为可以为中华奔走，为民请命。结果现实却恶狠狠地拍醒了我的昏梦。也该退出了，今日，2019年9月6日，我声明退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 12:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/9/6/n11502788.md#1" target="_blank">每日三退声明精选（2019/09/05）</a><br></h3>那里有共产党，那里就有独裁暴政，那里就有屠杀，就有暴力，就有谎言，特别是对香港“返送中”民众的暴行，在国际舞台上，充分暴露了其凶恶残暴、谎言流氓的邪恶嘴脸。地地道道的邪教万恶之源！我们声明退出中共邪教的一切组织，决不其为伍，支持香港“返送中”。 天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
